# openqp

./: .dockerignore  .gitignore  .gitlab-ci.yml  BENCHMARK_RESULTS.md  CMakeLists.txt  Dockerfile  FD_NAC_CONVENTION_AND_FIX.md  FD_NAC_ORACLE_DESIGN.md  GRAD_SCREENING_NOTES.md  HANDOFF_DFT_NMR.md  HANDOFF_NUM_NAC.md  LICENSE  MANIFEST.in  MRSF_ZVECTOR_PERF_NOTES.md  MRSF_ZVECTOR_PROPERTY_TASK1_PLAN.md  README.md  TROUBLESHOOTING.md  fd_nac_benchmark.py  fd_nac_logic_check.py  fd_nac_verify.py  index.html  mkdocs.yml  otr_interface.F90  pyproject.toml
basis_sets/: 2zapa-nr-cv.basis  2zapa-nr.basis  3-21g.basis  3zapa-nr-cv.basis  3zapa-nr.basis  4-31g.basis  4zapa-nr-cv.basis  4zapa-nr.basis  5-21g.basis  5zapa-nr-cv.basis  5zapa-nr.basis  6-21g.basis  6-31++g(d).basis  6-31++g(d,p)-j.basis  6-31++g(d,p).basis  6-31++g.basis  6-31+g(d)-j.basis  6-31+g(d).basis  6-31+g(d,p).basis  6-31+g.basis  6-311++g(2d,2p).basis  6-311++g(3df,3pd).basis  6-311++g(d).basis  6-311++g(d,p)-j.basis  6-311++g(d,p).basis  6-311++g.basis  6-311+g(2d,p).basis  6-311+g(d)-j.basis  6-311+g(d).basis  6-311+g(d,p).basis  6-311+g.basis  6-311g(2df,2pd).basis  6-311g(d).basis  6-311g(d,p).basis  6-311g-j.basis  6-311g.basis  6-311xxg(d,p).basis  6-31g(2df,p).basis  6-31g(3df,3pd).basis  6-31g(d)-blaudeau.basis  (+571 more)
benchmark/: .gitignore  run_poc.py
cmake/: FindDDX.cmake  oqp_functions.cmake
docker/: buildenv.Dockerfile
docs/: analytic_hessian_design.md  capabilities.md  coarse_to_fine_xc_grid.md  cphf_response_subsystem.md  dft_xc_reuse.md  gate2_handoff.md  index.md  input-file.md  installation.md  mrsf_pcm_design_note.md  native_hessian_implementation_guide.md  open_shell_hessian_design.md  pcm_ddx_validation.md  perf_levels.md  progressive_screening.md  quickstart.md  release-packaging.md  rys_hessian_2e_design.md  second_derivative_integral_design.md  soc2e_screening_analysis.md  solvent_ddx_scf_integration_seam.md  solvent_pcm_backend_spike.md  solvent_pcm_energy_convention.md  solvent_pcm_handoff.md  solvent_pcm_independent_validation.md  solvent_pcm_literature_benchmarks.md  solvent_pcm_reconciliation.md  solvent_pcm_source_term_handoff.md  solvent_pcm_source_term_review.md  solvent_pcm_validation_gate.md  solvent_pcm_validation_matrix.md  task_a_revised_design.md  troubleshooting.md  windows-msys2-packaging.md
ford/: index.html  search.html
include/: oqp.h
input_generator/: index.html
inputs/: omrsf-ch4.inp  oumrsf-ch4.coco.inp  oumrsf-ch4.inp  umrsf-ch4.coco.inp  umrsf-ch4.inp
pyoqp/: CMakeLists.txt  README.md  oqp_cffi_build.py  patch.sh  requirements.txt  setup.py  upload.sh
pyoqp/docs/: soc_namd_plan.md
pyoqp/oqp/: SimulationManager.py  __init__.py  openqp.py  pyoqp.py  runtime.py
pyoqp/oqp/analysis/: __init__.py  density_diff.py  descriptors.py  gto_grid.py  nto.py  transition_density.py
pyoqp/oqp/export/: __init__.py  cubegen.py  fcidump.py  qcschema.py
pyoqp/oqp/interop/: __init__.py  compare.py  parsers.py
pyoqp/oqp/molden/: __init__.py  moldenreader.py  moldenwriter.py
pyoqp/oqp/molecule/: molecule.py  oqpdata.py
pyoqp/oqp/periodic_table/: __init__.py
pyoqp/oqp/quantum/: README.md  __init__.py  fcidump.py  hamiltonian.py  integrals.py
pyoqp/oqp/utils/: constants.py  file_utils.py  geometry.py  gpu.py  input_checker.py  input_parser.py  kword_map.py  matrix.py  mpi_utils.py  oqp_tester.py  perf_levels.py  qmmm.py  regression.py
scripts/: nmr_giao_benchmark_matrix.py  pcm_benchmark_matrix.py  pcm_independent_ddpcm_validation.py  pcm_pyscf_reference.py  pcm_trusted_reference_diagnostics.py  pcm_validate_all.py  (+3 more)
source/: CMakeLists.txt  atomic_structure.F90  base64.F90  basis_api.F90  basis_library.F90  basis_tools.F90  bragg_slater.F90  c_interop.F90  cbase64.c  constants.F90  dftd4_interface.F90  dyson_orbitals.F90  ecp.F90  ecpint.F90  elements.F90  gpu_backend.F90  gpu_metc_cuda.cu  guess.F90  huckel.F90  huckel_lut.F90  minao_lut.F90  minres.F90  mp2_lib.F90  nlopt.F90  openqp_config.F90  otr_interface.F90  parallel.F90  pcg.F90  physical_constants.F90  precision.F90  printing.F90  sap_lut.F90  scf.F90  scf_addons.F90  scf_converger.F90  solvent_ddx_adapter.c  solvent_ddx_adapter.h  solvent_pcm.F90  solvent_pcm_harmonics.F90  strings.F90  (+9 more)
source/dftlib/: CMakeLists.txt  dft.F90  dft_fuzzycell.F90  dft_gridint.F90  dft_gridint_energy.F90  dft_gridint_fxc.F90  dft_gridint_giao.F90  dft_gridint_grad.F90  dft_gridint_gxc.F90  dft_gridint_phi_cache.F90  dft_gridint_sap.F90  dft_gridint_tdxc_grad.F90  dft_incdft.F90  dft_molgrid.F90  dft_partfunc.F90  dft_xc_libxc.F90  dft_xclib.F90  functionals.F90  grid_storage.F90  libxc.F90  radial_grid_types.F90
source/integrals/: CMakeLists.txt  boys.F90  boys_lut.F90  cart2sph.F90  grd1.F90  grd2.F90  grd2_rys.F90  int1.F90  int2.F90  int2_pairs.F90  int2_pure_generated.F90  int_libint.F90  int_rotaxis.F90  int_rotaxis_pure.F90  int_rys.F90  libint_f.F90  mod_1e_primitives.F90  mod_gauss_hermite.F90  mod_shell_tools.F90  rys_deriv.F90  rys_lut.F90
source/io/: CMakeLists.txt  constants_io.F90  errcode.F90  logger.F90  messages.F90
source/mathlib/: CMakeLists.txt  blas_thread.F90  blas_thread_ctl.c  blas_wrap.F90  eigen.F90  lapack_wrap.F90  mathlib.F90  mathlib_types.F90  oqp_linalg.F90
source/modules/: CMakeLists.txt  MRSF_NMR_DESIGN.md  NMR_BENCHMARKS.md  NMR_BUILD_NOTES.md  NMR_GATE_2B_A_DERIVATION.md  NMR_MAGNETIC_SYMMETRY_NOTE.md  NMR_SHIELDING_STATUS.md  ZVECTOR_SOLVER_PERFORMANCE.md  apply_basis.F90  basis_projection.F90  cphf.F90  cphf_dpdx_selftest.F90  cphf_nuclear_selftest.F90  dk_scalar.F90  electric_moments.F90  fock_deriv.F90  fock_deriv_selftest.F90  get_basis_overlap.F90  get_states_overlap.F90  grd2_hess_selftest.F90  guess_hcore.F90  guess_huckel.F90  guess_json.F90  guess_minao.F90  guess_modhuckel.F90  guess_sap.F90  hess1_selftest.F90  hf_energy.f90  hf_gradient.F90  hf_hessian.F90  int1e.F90  int2e.F90  mp2_energy.F90  namd.F90  nmr_giao_debug.F90  nmr_giao_shielding.F90  nmr_shielding.F90  oqp_banner.F90  population_analysis.F90  qmat_cache.F90  (+19 more)
source/wrapper/: libecpint_wrapper.cpp
(+1500 files in other folders)
